--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,17 +11,9 @@
          main {
              flex: 1 0 auto;
          }
-         /*
-            main, footer, header {
-            padding-left: 300px;
-            }
-          */
-         /* ul.sidenav {
-            padding-top: 40px;
-            } */
+
         </style>
         <script type="text/javascript" src="/html/js/petite-vue.iife.js"></script>
-        <!-- <script type="text/javascript" src="/html/js/jquery-3.7.1.min.js"></script> -->
         <script type="module">
          function Device(device) {
              console.log("Entered Device Component");
@@ -32,17 +24,12 @@
                      console.log("device mounted");
                  },
                  fetchDeviceDetails() {
-                     fetch("/api/v1/" + this.device.DeviceType + "/" + this.device.DeviceNumber + "/connected")
+                     fetch("/api/v1/" + this.device.DeviceType + "/" + this.device.DeviceNumber + "/details")
                          .then((_res) => _res.json())
                          .then((_data) => {
-                             this.device.Connected = _data.Value;
+                             this.device.Details = _data.Value;
+                             this.device.Connected = _data.Value.Connected;
                          });
-                     fetch("/api/v1/" + this.device.DeviceType + "/" + this.device.DeviceNumber + "/description")
-                         .then((_res) => _res.json())
-                         .then((_data) => {
-                             this.device.Extra = _data.Value;
-                         });
-
                  }
              }
          };
@@ -58,33 +45,6 @@
                          .then((data) => {
                              this.Devices = data.Value;
                          })
-                         // .then(() => {
-                            //  console.log("this.Devices: ", this.Devices);
-                             /* this.Devices.forEach((device) => {
-                              *     console.log("device: ", device);
-                              *     fetch("/api/v1/" + device.DeviceType + "/" + device.DeviceNumber + "/connected")
-                              *         .then((_res) => _res.json())
-                              *         .then((_data) => {
-                              *             device.Connected = _data.Value;
-                              *         });
-                              *     fetch("/api/v1/" + device.DeviceType + "/" + device.DeviceNumber + "/description")
-                              *         .then((_res) => _res.json())
-                              *         .then((_data) => {
-                              *             device.Extra = _data.Value;
-                              *         }); */
-                                 /* if(device.DeviceType == "telescope") {
-                                  *     try {
-                                  *         fetch("/api/v1/" + device.DeviceType + "/" + device.DeviceNumber + "/gain")
-                                  *             .then((_res) => _res.json())
-                                  *             .then((_data) => {
-                                  *                 device.Gain = _data.Value;
-                                  *             });
-                                  *     } catch(e) {}
-                                  * } */
-
-                     /* });
-                        }); */
-
                  },
                  editDevice(device) {
                      this.editingDevice = true;
@@ -98,25 +58,6 @@
          };
 
          PetiteVue.createApp({Device, Devices}).mount();
-         /* $.get( "/management/v1/configureddevices", function( data ) {
-          *     for(value of data["Value"]) {
-          *         let tbody = $("#device_table");
-          *         let device_row = document.createElement("tr");
-          *         let device_num = document.createElement("td");
-          *         device_num.innerHTML = value.DeviceNumber;
-          *         let device_type = document.createElement("td");
-          *         device_type.innerHTML = value.DeviceType;
-          *         let device_id = document.createElement("td");
-          *         device_id.innerHTML = value.UniqueID;
-          *         let device_name = document.createElement("td");
-          *         device_name.innerHTML = value.DeviceName;
-          *         device_row.append(device_num);
-          *         device_row.append(device_type);
-          *         device_row.append(device_id);
-          *         device_row.append(device_name);
-          *         tbody.append(device_row);
-          *     }
-          * }); */
         </script>
         <template id="device-template">
             <td>
@@ -134,10 +75,6 @@
             <td>
                 {{device.Connected}}
             </td>
-            <td>
-                {{device.Extra}} / {{device.Gain}}
-            </td>
-
             <td>
                 <a @click="editDevice(device)" class="waves-effect waves-light btn">Setup</a>
             </td>
@@ -176,13 +113,20 @@
                     </div>
                     <div class="col s9" id="app_main">
                         <div class="row" id="deviceeditor" v-if="editingDevice">
-                            Device editor
-                            <div v-if="device.DeviceType == 'telescope'">
-                                Telescope Edit
-                            </div>
-                            <div v-if="device.DeviceType == 'camera'">
-                                Camera Edit
-                            </div>
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Property</th>
+                                            <th>Value</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr v-for="(value, key) in device.Details" :key="key">
+                                            <td>{{key}}</td>
+                                            <td>{{value}}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                         </div>
 
                         <table id="device_table" v-if="!editingDevice">
@@ -204,39 +148,11 @@
                                         Connected
                                     </th>
                                     <th>
-                                        Extra
-                                    </th>
-                                    <th>
                                     </th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr v-for="device in Devices" v-effect="fetchDeviceDetails()" v-scope="Device(device)" @vue:mounted="mounted"></tr>
-                                <!-- <template v-for="device in Devices">
-                                     <tr>
-                                     <td>
-                                     {{device.DeviceType}}
-                                     </td>
-                                     <td>
-                                     {{device.DeviceNumber}}
-                                     </td>
-                                     <td>
-                                     {{device.UniqueID}}
-                                     </td>
-                                     <td>
-                                     {{device.DeviceName}}
-                                     </td>
-                                     <td>
-                                     {{device.Connected}}
-                                     </td>
-                                     <td>
-                                     {{device.Extra}} / {{device.Gain}}
-                                     </td>
-
-                                     <td>
-                                     <a @click="editDevice(device)" class="waves-effect waves-light btn">Setup</a>
-                                     </td> -->
-                                    </tr>
                                 </template>
                             </tbody>
                         </table>
@@ -247,7 +163,7 @@
         <footer class="page-footer blue-grey">
             <div class="row">
                 <div class="col s3">&#169; 2024 Copyright Dave Raphael</div>
-                <div class="col right"><a class="grey-text text-lighten-4 right" href="#!">Github</a></div>
+                <div class="col right"><a class="grey-text text-lighten-4 right" href="https://github.com/ceterumnet/AlpacaHub">Github</a></div>
             </div>
         </footer>
         <script type="text/javascript" src="/html/materialize/js/materialize.min.js"></script>
